--- a/styles/style.css
+++ b/styles/style.css
@@ -12,9 +12,9 @@ h1 {
   margin-bottom: 20px;
 }
 
-button {
+.buttonadddelete {
   display: block;
-  width: 100%;
+  width: 70%;
   padding: 10px;
   background-color: #007bff;
   color: white;
@@ -22,31 +22,69 @@ button {
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
-  margin-bottom: 20px;
+  margin: 10px auto;
+  text-align: center;
 }
 
-button:hover {
+.buttonadddelete:hover {
   background-color: #0056b3;
 }
 
-ul {
-  list-style-type: none;
-  padding: 0;
+body {
+  width: 15rem;
+  height: 20rem;
+  font-family: Arial, sans-serif;
+  overflow: hidden;
 }
 
-li {
-  background-color: white;
-  margin-bottom: 10px;
-  padding: 10px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+#urlList {
+  margin-top: 10px;
+  max-height: calc(100% - 60px);
+  overflow-y: auto;
 }
 
-li a {
+.urlItem {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.25rem;
+  margin-bottom: 5px;
+  background: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+.urlItem a {
+  flex-grow: 1;
+  margin-right: 10px;
+  word-break: break-all; /* Force URLs to break and wrap to the next line */
   text-decoration: none;
   color: #007bff;
 }
 
-li a:hover {
-  text-decoration: underline;
+.urlItem:nth-child(odd) {
+  background: #80808030;
+}
+
+.urlItem:nth-child(even) {
+  background: #ffffff;
+}
+
+.urlItem span {
+  flex-grow: 1;
+  margin-right: 10px;
+  word-break: break-all;
+}
+
+.urlItem button {
+  flex-shrink: 0;
+  background-color: #ff4d4d;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 0.25rem 0.5rem;
+  cursor: pointer;
+}
+
+.urlItem button:hover {
+  background-color: #ff1a1a;
 }
